--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,25 @@
 		</developer>
 	</developers>
 
+	<properties>
+		<junit.version>4.11</junit.version>
+	</properties>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
 	<modules>
 		<module>platform</module>
 		<module>platform-bom</module>
 		<module>platform-versions</module>
-		<module>pom-tests</module>
+		<module>platform-tests</module>
 	</modules>
 
 </project>
