Add build configuration for Spring Integration’s Splunk extension
Spring Integration Splunk is now built by the buildPlatform script.
Due to the layout of the Spring Integration extensions repository, it
has been necessary to add support for running a build from a
sub-directory of a cloned repository.

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -329,6 +329,9 @@ platform_definition:
     - name: Spring Integration Splunk
       groupId: org.springframework.integration
       version: 1.1.0.BUILD-SNAPSHOT
+      build:
+        repository: https://github.com/spring-projects/spring-integration-extensions
+        directory: spring-integration-splunk
       modules:
         - spring-integration-splunk
     - name: Spring LDAP
