--- a/scripts/addLocalMavenRepository.gradle
+++ b/scripts/addLocalMavenRepository.gradle
@@ -1,5 +1,5 @@
 allprojects {
 	repositories {
-		maven { url rootProject.file('../repository') }
+		maven { url rootProject.file(repositoryDir) }
 	}
 }
