--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -1,9 +1,9 @@
 buildscript {
 	repositories {
-		mavenCentral()
+		maven { url 'http://repo.spring.io/libs-snapshot'}
 	}
 	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.1.3.RELEASE'
+		classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.0.BUILD-SNAPSHOT'
 	}
 }
 
