--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-build</artifactId>
-		<version>1.2.0.BUILD-SNAPSHOT</version>
+		<version>2.0.0.BUILD-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>platform</artifactId>
@@ -46,8 +46,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>io.spring.platform</groupId>
-			<artifactId>platform-versions</artifactId>
-			<version>1.2.0.BUILD-SNAPSHOT</version>
+			<artifactId>platform-bom</artifactId>
+			<version>2.0.0.BUILD-SNAPSHOT</version>
 			<type>properties</type>
 		</dependency>
 	</dependencies>
