--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.1.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.1.4.RELEASE
+      version: 1.2.0.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
