--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -48,6 +48,7 @@
 
 		<grails.version>2.4.0</grails.version>
 
+		<spring-amqp.version>1.3.6.RELEASE</spring-amqp.version>
 		<spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.1.RELEASE</spring-data-hadoop.version>
 		<spring-ldap.version>2.0.2.RELEASE</spring-ldap.version>
