--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.1
+      version: 1.8.2
       modules:
         - aspectjweaver
         - aspectjtools
@@ -57,7 +57,7 @@ platform_definition:
         - grails-wrapper-support
     - name: Groovy
       groupId: org.codehaus.groovy
-      version: 2.3.3
+      version: 2.3.6
       modules:
         - groovy
         - groovy-ant
@@ -80,7 +80,7 @@ platform_definition:
         - groovy-xml
     - name: Reactor
       groupId: org.projectreactor
-      version: 1.1.2.RELEASE
+      version: 1.1.4.RELEASE
       modules:
         - reactor-core
         - reactor-groovy
@@ -94,7 +94,7 @@ platform_definition:
            - jdk8
     - name: Reactor Spring
       groupId: org.projectreactor.spring
-      version: 1.1.2.RELEASE
+      version: 1.1.3.RELEASE
       modules:
         - reactor-spring-context
         - reactor-spring-core
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.1.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.1.4.RELEASE
+      version: 1.1.6.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -183,40 +183,40 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-cloud
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.0.1.RELEASE
+      version: 1.0.4.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.8.1.RELEASE
+      version: 1.8.4.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.1.1.RELEASE
+      version: 1.1.4.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.0.1.RELEASE
+      version: 1.0.4.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.4.1.RELEASE
+      version: 1.4.4.RELEASE
       modules:
         - spring-data-gemfire
       build:
         repository: https://github.com/spring-projects/spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.6.1.RELEASE
+      version: 1.6.4.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.5.1.RELEASE
+      version: 1.5.4.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -224,30 +224,30 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.1.1.RELEASE
+      version: 3.1.4.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.3.1.RELEASE
+      version: 1.3.4.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-data-redis
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.1.1.RELEASE
+      version: 2.1.4.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.2.1.RELEASE
+      version: 1.2.4.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.0.6.RELEASE
+      version: 4.0.7.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -288,7 +288,7 @@ platform_definition:
         - spring-yarn-test
     - name: Spring HATEOAS
       groupId: org.springframework.hateoas
-      version: 0.14.0.RELEASE
+      version: 0.16.0.RELEASE
       modules:
         - spring-hateoas
     - name: Spring Integration
@@ -362,10 +362,10 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 3.2.4.RELEASE
+      version: 3.2.5.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-security
-        checkout: 3.2.4.RELEASE
+        checkout: 3.2.5.RELEASE
       modules:
         - spring-security-acl
         - spring-security-aspects
@@ -451,10 +451,6 @@ platform_definition:
       - 'org.springframework:spring-instrument-tomcat' # Only needed with Tomcat 6 and the Platform uses Tomcat 7+
       - 'org.springframework.boot:spring-boot-dependencies' # The platform bom is a superset of spring-boot-dependencies
       - 'org.springframework.boot:spring-boot-starter-parent' # The platform bom is a superset of spring-boot-starter-parent
-      - 'org.springframework.data:spring-cql' # Not included in Spring Data Bom
-      - 'org.springframework.data:spring-data-mongodb-cross-store' # Not included in Spring Data Bom
-      - 'org.springframework.data:spring-data-mongodb-log4j' # Not included in Spring Data Bom
-      - 'org.springframework.data:spring-data-rest-core' # Not included in Spring Data Bom
       - 'org.springframework.data.build:spring-data-java8-stub' # Not included in Spring Data Bom
       - 'org.eclipse.jetty*:*:9.*' # The Platform uses Jetty 8
     ignored_modules:
@@ -477,6 +473,7 @@ platform_definition:
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
       - 'org.javassist:javassist'
       - 'org.slf4j:slf4j-jdk14'
+      - 'org.spockframework:spock-spring'
       - 'org.springframework:springloaded'
   repositories:
       - id: central
