--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -59,10 +59,10 @@
 		<spring-web-flow.version>2.4.1.RELEASE</spring-web-flow.version>
 		<spring-web-services.version>2.2.0.RELEASE</spring-web-services.version>
 
-		<ant.version>1.9.3</ant.version>
+		<ant.version>1.9.4</ant.version>
 		<antlr.version>2.7.7</antlr.version>
 		<aopalliance.version>1.0</aopalliance.version>
-		<apacheds.version>1.5.5</apacheds.version>
+		<apacheds.version>1.5.7</apacheds.version>
 		<apache-shared-ldap.version>0.9.15</apache-shared-ldap.version>
 		<axiom.version>1.2.14</axiom.version>
 		<bouncycastle.version>1.47</bouncycastle.version>
@@ -70,15 +70,15 @@
 		<bsh.version>2.0b4</bsh.version>
 		<c3p0.version>0.9.2.1</c3p0.version>
 		<cas-client.version>3.2.1</cas-client.version>
-		<cassandra.version>2.0.6</cassandra.version>
-		<cassandra-driver.version>2.0.2</cassandra-driver.version>
+		<cassandra.version>2.0.9</cassandra.version>
+		<cassandra-driver.version>2.0.5</cassandra-driver.version>
 		<castor.version>1.3.3</castor.version>
-		<commonj.version>1.1.0</commonj.version>
+		<commonj.version>1.1.1</commonj.version>
 		<commons-beanutils-core.version>1.8.3</commons-beanutils-core.version>
 		<commons-cli.version>1.2</commons-cli.version>
 		<commons-codec.version>1.7</commons-codec.version>
 		<commons-configuration.version>1.6</commons-configuration.version>
-		<commons-dbcp2.version>2.0</commons-dbcp2.version>
+		<commons-dbcp2.version>2.0.1</commons-dbcp2.version>
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<commons-io.version>2.4</commons-io.version>
 		<commons-httpclient.version>3.1</commons-httpclient.version>
@@ -86,28 +86,28 @@
 		<commons-lang3.version>3.1</commons-lang3.version>
 		<commons-logging.version>1.1.3</commons-logging.version>
 		<commons-net.version>3.3</commons-net.version>
-		<couchbase-client.version>1.4.1</couchbase-client.version>
+		<couchbase-client.version>1.4.4</couchbase-client.version>
 		<derby.version>10.10.2.0</derby.version>
 		<dom4j.version>1.6.1</dom4j.version>
-		<eclipselink.version>2.5.1</eclipselink.version>
+		<eclipselink.version>2.5.2</eclipselink.version>
 		<eclipselink-javax-persistence.version>2.1.0</eclipselink-javax-persistence.version>
-		<ehcache-core.version>2.6.5</ehcache-core.version>
+		<ehcache-core.version>2.6.9</ehcache-core.version>
 		<elasticsearch.version>1.1.1</elasticsearch.version>
 		<evo-inflector.version>1.1</evo-inflector.version>
-		<findbugs-jsr305.version>2.0.0</findbugs-jsr305.version>
-		<gpars.version>1.2.0</gpars.version>
+		<findbugs-jsr305.version>2.0.3</findbugs-jsr305.version>
+		<gpars.version>1.2.1</gpars.version>
 		<gs-collections.version>5.0.0</gs-collections.version>
 		<guava.version>17.0</guava.version>
 		<guice.version>3.0</guice.version>
 		<hadoop.version>2.2.0</hadoop.version>
 		<hbase.version>0.96.1.1-hadoop2</hbase.version>
-		<hessian.version>4.0.7</hessian.version>
+		<hessian.version>4.0.38</hessian.version>
 		<hive.version>0.12.0</hive.version>
 		<ibatis-sqlmap.version>2.3.4.726</ibatis-sqlmap.version>
 		<itext.version>2.1.7</itext.version>
 		<ivy.version>2.3.0</ivy.version>
 		<jackson1.version>1.9.13</jackson1.version>
-		<jasperreports.version>5.5.1</jasperreports.version>
+		<jasperreports.version>5.5.2</jasperreports.version>
 		<jamon.version>2.4</jamon.version>
 		<jansi.version>1.11</jansi.version>
 		<javax-activation.version>1.1.1</javax-activation.version>
@@ -117,12 +117,12 @@
 		<javax-cdi.version>1.0</javax-cdi.version>
 		<javax-connector.version>1.5</javax-connector.version>
 		<javax-ejb.version>3.0</javax-ejb.version>
-		<javax-el.version>2.2.4</javax-el.version>
+		<javax-el.version>2.2.5</javax-el.version>
 		<javax-enterprise-concurrent.version>1.0</javax-enterprise-concurrent.version>
 		<javax-faces.version>2.2</javax-faces.version>
 		<javax-inject.version>1</javax-inject.version>
 		<javax-jax-rs.version>1.0</javax-jax-rs.version>
-		<javax-jdo.version>3.0</javax-jdo.version>
+		<javax-jdo.version>3.0.1</javax-jdo.version>
 		<javax-jsp.version>2.2.1</javax-jsp.version>
 		<javax-jstl.version>1.2.1</javax-jstl.version>
 		<javax-mail.version>1.4.7</javax-mail.version>
@@ -133,14 +133,14 @@
 		<javax-websocket.version>1.0</javax-websocket.version>
 		<jbatch-tck.version>1.0</jbatch-tck.version>
 		<jcommander.version>1.35</jcommander.version>
-		<jeromq.version>0.3.3</jeromq.version>
+		<jeromq.version>0.3.4</jeromq.version>
 		<jettison.version>1.2</jettison.version>
 		<jibx.version>1.2.5</jibx.version>
 		<jinterface.version>1.5.6</jinterface.version>
 		<jline.version>2.11</jline.version>
 		<jopt-simple.version>4.6</jopt-simple.version>
 		<jredis.version>06052013</jredis.version>
-		<jruby.version>1.7.12</jruby.version>
+		<jruby.version>1.7.15</jruby.version>
 		<jsch.version>0.1.51</jsch.version>
 		<json-path.version>0.9.1</json-path.version>
 		<jsr166e.version>1.0</jsr166e.version>
@@ -151,17 +151,17 @@
 		<ldapsdk.version>4.1</ldapsdk.version>
 		<lettuce.version>2.3.3</lettuce.version>
 		<lmax-disruptor.version>3.2.1</lmax-disruptor.version>
-		<lombok.version>1.14.4</lombok.version>
-		<myfaces.version>2.1.9</myfaces.version>
+		<lombok.version>1.14.6</lombok.version>
+		<myfaces.version>2.1.15</myfaces.version>
 		<openhft-chronicle.version>2.0.3</openhft-chronicle.version>
 		<openhft-lang.version>6.1.4</openhft-lang.version>
 		<openjpa.version>2.3.0</openjpa.version>
-		<nekohtml.version>1.9.20</nekohtml.version>
-		<neo4j.version>2.0.3</neo4j.version>
+		<nekohtml.version>1.9.21</nekohtml.version>
+		<neo4j.version>2.0.4</neo4j.version>
 		<neo4j-cypher-dsl.version>2.0.1</neo4j-cypher-dsl.version>
 		<neo4j-graph-collections.version>0.7.1-neo4j-2.0.1</neo4j-graph-collections.version>
 		<neo4j-spatial.version>0.12-neo4j-2.0.1</neo4j-spatial.version>
-		<netty.version>4.0.18.Final</netty.version>
+		<netty.version>4.0.23.Final</netty.version>
 		<objenesis.version>2.1</objenesis.version>
 		<ognl.version>2.6.11</ognl.version>
 		<openid4java.version>0.9.6</openid4java.version>
@@ -170,29 +170,29 @@
 		<poi.version>3.10-FINAL</poi.version>
 		<qdox.version>1.12.1</qdox.version>
 		<quartz.version>2.2.1</quartz.version>
-		<rabbit-amqp-client.version>3.3.1</rabbit-amqp-client.version>
+		<rabbit-amqp-client.version>3.3.5</rabbit-amqp-client.version>
 		<rome.version>1.0.0</rome.version>
 		<rometools.version>1.5.0</rometools.version>
-		<querydsl.version>3.3.3</querydsl.version>
+		<querydsl.version>3.3.4</querydsl.version>
 		<protobuf.version>2.5.0</protobuf.version>
 		<smack.version>3.2.1</smack.version>
 		<snappy.version>1.1.0.1</snappy.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
-		<sun-jsf.version>2.2.4</sun-jsf.version>
+		<sun-jsf.version>2.2.8-01</sun-jsf.version>
 		<sun-mail.version>1.4.7</sun-mail.version>
 		<sun-saaj.version>1.3.23</sun-saaj.version>
 		<taglibs-standard.version>1.2.1</taglibs-standard.version>
 		<testng.version>6.8.8</testng.version>
-		<tiles.version>3.0.3</tiles.version>
+		<tiles.version>3.0.4</tiles.version>
 		<tiles-request.version>1.0.1</tiles-request.version>
 		<tyrus.version>1.2.1</tyrus.version>
 		<typica.version>1.3</typica.version>
-		<undertow.version>1.0.1.Final</undertow.version>
+		<undertow.version>1.0.15.Final</undertow.version>
 		<velocity-tools-view.version>1.4</velocity-tools-view.version>
 		<websphere-uow.version>6.0.2.17</websphere-uow.version>
-		<woodstox.version>4.2.0</woodstox.version>
-		<wss4j.version>1.6.15</wss4j.version>
+		<woodstox.version>4.2.1</woodstox.version>
+		<wss4j.version>1.6.16</wss4j.version>
 		<xmlbeans.version>2.6.0</xmlbeans.version>
 		<xmlschema.version>2.1.0</xmlschema.version>
 		<xmlunit.version>1.5</xmlunit.version>
