Deprecate and remove `org.apache.cassandra:cassandra-all`
Spring Data Cassandra no longer depends on cassandra-all so it is
no longer required in the Platform. It is deprecated in 1.1 and
removed from the Platform in 2.0.

Closes #56

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -494,6 +494,7 @@ platform_definition:
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-envers'
       # Modules that were previously used and are being retained for backwards compatibility
+      - 'org.apache.cassandra:cassandra-all'
       - 'org.glassfish.tyrus:tyrus-websocket-core'
       - 'org.igniterealtime.smack:smackx'
   repositories:
