--- a/platform-tests/src/test/resources/gradle-header.template
+++ b/platform-tests/src/test/resources/gradle-header.template
@@ -14,10 +14,10 @@ springBoot {
 }
 
 repositories {
-	maven { url 'http://repo.opengeo.org'}
-	maven { url 'http://repo.spring.io/libs-snapshot'}
-	maven { url 'http://download.osgeo.org/webdav/geotools'}
-	maven { url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts'}
+	maven { url 'http://repo.boundlessgeo.com' }
+	maven { url 'http://download.osgeo.org/webdav/geotools' }
+	maven { url 'http://repo.spring.io/libs-snapshot' }
+	maven { url 'http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts' }
 	mavenCentral()
 }
 
