--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -251,7 +251,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.1.0.RELEASE
+      version: 4.1.1.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
