Update definition and docs for deprecation of net.java.dev.rome
See gh-63

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -494,6 +494,8 @@ platform_definition:
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-envers'
       # Modules that were previously used and are being retained for backwards compatibility
+      - 'net.java.dev.rome:rome'
+      - 'net.java.dev.rome:rome-fetcher'
       - 'org.apache.cassandra:cassandra-all'
       - 'org.glassfish.tyrus:tyrus-websocket-core'
       - 'org.igniterealtime.smack:smackx'
