Mark com.zaxxer:HikraiCP as an intentionally unused dependency
Boot has upgraded to HikariCP 2.1 where the HikariCP artifact
requires Java 8. As a result, Boot now depends upon HikariCP-java6.
Dependency management for HikariCP has been retained to provide better
backwards compatibility and to support those who are not yet running
on Java 8.

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -480,6 +480,7 @@ platform_definition:
       - 'com.codahale.metrics:metrics-ganglia'
       - 'com.codahale.metrics:metrics-servlets'
       - 'com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute'
+      - 'com.zaxxer:HikariCP'
       - 'javax.servlet:jstl'
       - 'mysql:mysql-connector-java'
       - 'org.apache.activemq:activemq-client'
