--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -161,6 +161,7 @@ platform_definition:
         - spring-boot-starter-log4j
         - spring-boot-starter-log4j2
         - spring-boot-starter-logging
+        - spring-boot-starter-mail
         - spring-boot-starter-mobile
         - spring-boot-starter-parent
         - spring-boot-starter-redis
