--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -254,7 +254,7 @@ platform_definition:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.1.1.RELEASE
+      version: 4.1.2.BUILD-SNAPSHOT
       modules:
         - spring-aop
         - spring-aspects
