--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -112,7 +112,7 @@
 		<javax-annotation.version>1.0</javax-annotation.version>
 		<javax-batch.version>1.0</javax-batch.version>
 		<javax-cache.version>1.0.0</javax-cache.version>
-		<javax-cdi.version>1.0</javax-cdi.version>
+		<javax-cdi.version>1.0-SP4</javax-cdi.version>
 		<javax-connector.version>1.5</javax-connector.version>
 		<javax-ejb.version>3.0</javax-ejb.version>
 		<javax-el.version>2.2.5</javax-el.version>
