--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -50,6 +50,7 @@
 
 		<spring-cloud.version>1.0.0.RELEASE</spring-cloud.version>
 		<spring-data-hadoop.version>2.0.3.RELEASE</spring-data-hadoop.version>
+		<spring-integration.version>4.0.5.RELEASE</spring-integration.version>
 		<spring-ldap.version>2.0.2.RELEASE</spring-ldap.version>
 		<spring-plugin.version>1.1.0.RELEASE</spring-plugin.version>
 		<spring-retry.version>1.1.2.RELEASE</spring-retry.version>
