--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -334,6 +334,13 @@ platform_definition:
         - spring-integration-xmpp
         - spring-integration-websocket
         - spring-integration-ws
+    - name: Spring Integration Flow
+      groupId: org.springframework.integration
+      version: 1.0.0.BUILD-SNAPSHOT
+      build:
+        repository: https://github.com/spring-projects/spring-integration-flow
+      modules:
+        - spring-integration-flow
     - name: Spring Integration Splunk
       groupId: org.springframework.integration
       version: 1.1.0.BUILD-SNAPSHOT
