--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -173,6 +173,7 @@ platform_definition:
         - spring-boot-starter-test
         - spring-boot-starter-thymeleaf
         - spring-boot-starter-tomcat
+        - spring-boot-starter-undertow
         - spring-boot-starter-velocity
         - spring-boot-starter-web
         - spring-boot-starter-websocket
