--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -345,7 +345,7 @@ platform_definition:
         - spring-integration-flow
     - name: Spring Integration Splunk
       groupId: org.springframework.integration
-      version: 1.1.0.BUILD-SNAPSHOT
+      version: 1.1.0.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-integration-extensions
         directory: spring-integration-splunk
