--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -358,6 +358,7 @@ platform_definition:
       version: 1.1.0.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-integration-extensions
+        checkout: splunk.v1.1.0.RELEASE
         directory: spring-integration-splunk
       modules:
         - spring-integration-splunk
