--- a/platform-versions/pom.xml
+++ b/platform-versions/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-build</artifactId>
-		<version>1.1.0.BUILD-SNAPSHOT</version>
+		<version>1.1.0.RC1</version>
 	</parent>
 
 	<artifactId>platform-versions</artifactId>
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>io.spring.platform</groupId>
 			<artifactId>platform-bom</artifactId>
-			<version>${project.version}</version>
+			<version>1.1.0.RC1</version>
 			<type>pom</type>
 		</dependency>
 	</dependencies>
