--- a/platform-tests/pom.xml
+++ b/platform-tests/pom.xml
@@ -17,7 +17,7 @@
 		<name>Pivotal Software, Inc.</name>
 		<url>http://www.spring.io</url>
 	</organization>
-	
+
 	<properties>
 		<aether.version>1.0.0.v20140518</aether.version>
 		<maven.version>3.2.1</maven.version>
@@ -111,7 +111,7 @@
 		<dependency>
 			<groupId>org.gradle</groupId>
 			<artifactId>gradle-tooling-api</artifactId>
-			<version>2.1-20140706220021+0000</version> <!-- http://issues.gradle.org//browse/GRADLE-3074 -->
+			<version>2.2.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -200,13 +200,7 @@
 	<repositories>
 		<repository>
 			<id>gradle</id>
-			<url>http://repo.gradle.org/gradle/libs-snapshots-local</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
+			<url>http://repo.gradle.org/gradle/libs-releases-local</url>
 		</repository>
 	</repositories>
 
