Workaround Artifactory promotion limitation
Artifactory will not promote two artifacts with the same hash, even
if the two artifacts have different coordinates. This causes a
problem as the platform-bom.properties and
platform-versions.properties files have identical contents (this
is intentional with platform-versions.properties being deprecated in
favour of the new platform-bom.properties file).

This commit works around the problem by appending a new line to the
end of platform-versions.properties thereby ensuring that it has
a different hash to platform-bom.properties while still being
functionaly identical.

Closes #122

--- a/platform-versions/pom.xml
+++ b/platform-versions/pom.xml
@@ -85,6 +85,32 @@
 				</executions>
 			</plugin>
 			<plugin>
+				<groupId>org.codehaus.gmavenplus</groupId>
+				<artifactId>gmavenplus-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>execute</goal>
+						</goals>
+						<phase>test</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<scripts>
+						<script>new File(project.build.directory, 'dependency/platform-bom.properties').append('\n')</script>
+					</scripts>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-all</artifactId>
+						<version>2.3.8</version>
+					</dependency>
+				</dependencies>
+				<inherited>false</inherited>
+			</plugin>
+			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
