--- a/platform-versions/pom.xml
+++ b/platform-versions/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-bom</artifactId>
-		<version>1.0.4.BUILD-SNAPSHOT</version>
+		<version>1.0.4.RELEASE</version>
 		<relativePath>../platform-bom</relativePath>
 	</parent>
 
