--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -428,6 +428,14 @@ platform_definition:
       modules:
         - spring-security-oauth
         - spring-security-oauth2
+    - name: Spring Session
+      groupId: org.springframework.session
+      version: 1.0.0.RELEASE
+      modules:
+        - spring-session
+        - spring-session-data-redis
+      build:
+        repository: https://github.com/spring-projects/spring-session
     - name: Spring Social
       groupId: org.springframework.social
       version: 1.1.0.RELEASE
