--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -187,7 +187,7 @@
 		<splunk.version>1.3.0</splunk.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
-		<sun-jsf.version>2.2.8-02</sun-jsf.version>
+		<sun-jsf.version>2.2.9</sun-jsf.version>
 		<sun-saaj.version>1.3.23</sun-saaj.version>
 		<taglibs-standard.version>1.2.1</taglibs-standard.version>
 		<testng.version>6.8.8</testng.version>
