--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -436,6 +436,7 @@ platform_definition:
         - spring-session-data-redis
       build:
         repository: https://github.com/spring-projects/spring-session
+        checkout: 1.0.0.RELEASE
     - name: Spring Social
       groupId: org.springframework.social
       version: 1.1.0.RELEASE
