--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -49,6 +49,7 @@
 
 		<spring-amqp.version>1.4.2.RELEASE</spring-amqp.version>
 		<spring-data-hadoop.version>2.0.4.RELEASE</spring-data-hadoop.version>
+		<spring-integration.version>4.1.2.RELEASE</spring-integration.version>
 		<spring-integration-flow.version>1.0.0.RELEASE</spring-integration-flow.version>
 		<spring-integration-java-dsl.version>1.0.1.RELEASE</spring-integration-java-dsl.version>
 		<spring-integration-splunk.version>1.1.0.RELEASE</spring-integration-splunk.version>
