--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.4
+      version: 1.8.5
       modules:
         - aspectjweaver
         - aspectjtools
@@ -57,7 +57,7 @@ platform_definition:
         - grails-wrapper-support
     - name: Groovy
       groupId: org.codehaus.groovy
-      version: 2.3.8
+      version: 2.3.10
       modules:
         - groovy
         - groovy-ant
@@ -106,7 +106,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.3.7.RELEASE
+      version: 1.3.9.RELEASE
       modules:
         - spring-amqp
         - spring-erlang
@@ -115,7 +115,7 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-amqp
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 3.0.2.RELEASE
+      version: 3.0.3.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.2.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.1.10.RELEASE
+      version: 1.1.11.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -183,40 +183,40 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.0.4.RELEASE
+      version: 1.0.5.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.8.4.RELEASE
+      version: 1.8.5.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.1.4.RELEASE
+      version: 1.1.5.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.0.4.RELEASE
+      version: 1.0.5.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.4.4.RELEASE
+      version: 1.4.5.RELEASE
       modules:
         - spring-data-gemfire
       build:
         repository: https://github.com/spring-projects/spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.6.4.RELEASE
+      version: 1.6.5.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.5.4.RELEASE
+      version: 1.5.5.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -224,30 +224,30 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.1.4.RELEASE
+      version: 3.1.5.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.3.4.RELEASE
+      version: 1.3.5.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-data-redis
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.1.4.RELEASE
+      version: 2.1.5.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.2.4.RELEASE
+      version: 1.2.5.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.0.8.RELEASE
+      version: 4.0.9.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -293,7 +293,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 4.0.5.RELEASE
+      version: 4.0.6.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-integration
       modules:
@@ -380,7 +380,7 @@ platform_definition:
         - spring-security-web
     - name: Spring Security JWT
       groupId: org.springframework.security
-      version: 1.0.2.RELEASE
+      version: 1.0.3.RELEASE
       modules:
        - spring-security-jwt
     - name: Spring Security OAuth
@@ -470,6 +470,14 @@ platform_definition:
       - 'org.apache.tomcat:tomcat-jsp-api'
       - 'org.codehaus.janino:janino'
       - 'org.eclipse.jetty:jetty-annotations'
+      - 'org.eclipse.jetty:jetty-continuation'
+      - 'org.eclipse.jetty:jetty-deploy'
+      - 'org.eclipse.jetty:jetty-http'
+      - 'org.eclipse.jetty:jetty-io'
+      - 'org.eclipse.jetty:jetty-jmx'
+      - 'org.eclipse.jetty:jetty-plus'
+      - 'org.eclipse.jetty:jetty-security'
+      - 'org.eclipse.jetty:jetty-xml'
       - 'org.eclipse.jetty.orbit:javax.servlet.jsp'
       - 'org.javassist:javassist'
       - 'org.slf4j:slf4j-jdk14'
