--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -2,7 +2,7 @@ platform_definition:
   projects:
     - name: Aspect J
       groupId: org.aspectj
-      version: 1.8.4
+      version: 1.8.5
       modules:
         - aspectjweaver
         - aspectjtools
@@ -57,7 +57,7 @@ platform_definition:
         - grails-wrapper-support
     - name: Groovy
       groupId: org.codehaus.groovy
-      version: 2.3.8
+      version: 2.3.10
       modules:
         - groovy
         - groovy-ant
@@ -106,7 +106,7 @@ platform_definition:
           - jdk8
     - name: Spring AMQP
       groupId: org.springframework.amqp
-      version: 1.4.2.RELEASE
+      version: 1.4.3.RELEASE
       modules:
         - spring-amqp
         - spring-erlang
@@ -115,7 +115,7 @@ platform_definition:
         repository: https://github.com/spring-projects/spring-amqp
     - name: Spring Batch
       groupId: org.springframework.batch
-      version: 3.0.2.RELEASE
+      version: 3.0.3.RELEASE
       modules:
         - spring-batch-core
         - spring-batch-infrastructure
@@ -126,7 +126,7 @@ platform_definition:
         checkout: 3.0.2.RELEASE
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.2.1.RELEASE
+      version: 1.2.2.RELEASE
       modules:
         - spring-boot
         - spring-boot-actuator
@@ -152,6 +152,7 @@ platform_definition:
         - spring-boot-starter-data-solr
         - spring-boot-starter-freemarker
         - spring-boot-starter-groovy-templates
+        - spring-boot-starter-hateoas
         - spring-boot-starter-hornetq
         - spring-boot-starter-integration
         - spring-boot-starter-jdbc
@@ -164,6 +165,7 @@ platform_definition:
         - spring-boot-starter-logging
         - spring-boot-starter-mail
         - spring-boot-starter-mobile
+        - spring-boot-starter-mustache
         - spring-boot-starter-parent
         - spring-boot-starter-redis
         - spring-boot-starter-remote-shell
@@ -181,7 +183,7 @@ platform_definition:
         - spring-boot-starter-ws
     - name: Spring Cloud
       groupId: org.springframework.cloud
-      version: 1.1.0.RELEASE
+      version: 1.1.1.RELEASE
       modules:
         - spring-cloud-core
         - spring-cloud-cloudfoundry-connector
@@ -192,40 +194,40 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.1.1.RELEASE
+      version: 1.1.2.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.9.1.RELEASE
+      version: 1.9.2.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 1.2.1.RELEASE
+      version: 1.2.2.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 1.1.1.RELEASE
+      version: 1.1.2.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.5.1.RELEASE
+      version: 1.5.2.RELEASE
       modules:
         - spring-data-gemfire
       build:
         repository: https://github.com/spring-projects/spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.7.1.RELEASE
+      version: 1.7.2.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.6.1.RELEASE
+      version: 1.6.2.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -233,30 +235,30 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 3.2.1.RELEASE
+      version: 3.2.2.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.4.1.RELEASE
+      version: 1.4.2.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-data-redis
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.2.1.RELEASE
+      version: 2.2.2.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 1.3.1.RELEASE
+      version: 1.3.2.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 4.1.4.RELEASE
+      version: 4.1.5.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -401,7 +403,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 3.2.5.RELEASE
+      version: 3.2.6.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-security
         checkout: 3.2.5.RELEASE
@@ -419,7 +421,7 @@ platform_definition:
         - spring-security-web
     - name: Spring Security JWT
       groupId: org.springframework.security
-      version: 1.0.2.RELEASE
+      version: 1.0.3.RELEASE
       modules:
        - spring-security-jwt
     - name: Spring Security OAuth
@@ -511,6 +513,7 @@ platform_definition:
       # For user convenience, Boot provides extra dependency management for modules that both it
       # and the rest of the Platform do not depend upon
       - 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+      - 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'
       - 'com.github.mxab.thymeleaf.extras:thymeleaf-extras-data-attribute'
       - 'com.zaxxer:HikariCP'
       - 'io.dropwizard.metrics:metrics-ganglia'
@@ -548,6 +551,7 @@ platform_definition:
       - 'net.java.dev.rome:rome-fetcher'
       - 'org.apache.cassandra:cassandra-all'
       - 'org.glassfish.tyrus:tyrus-websocket-core'
+      - 'org.hibernate.javax.persistence:hibernate-jpa-2.0-api'
       - 'org.igniterealtime.smack:smackx'
       - 'org.neo4j:neo4j-graph-collections'
   repositories:
