--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -177,7 +177,7 @@
 		<snappy.version>1.1.0.1</snappy.version>
 		<spullara-redis.version>0.7</spullara-redis.version>
 		<sun-facelets.version>1.1.14</sun-facelets.version>
-		<sun-jsf.version>2.2.8-02</sun-jsf.version>
+		<sun-jsf.version>2.2.10</sun-jsf.version>
 		<sun-mail.version>1.4.7</sun-mail.version>
 		<sun-saaj.version>1.3.23</sun-saaj.version>
 		<taglibs-standard.version>1.2.1</taglibs-standard.version>
