Ensure that Boot snapshots are available to the build

--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -1462,4 +1462,23 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>spring-snapshots</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<repositories>
+				<repository>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot</url>
+					<snapshots>
+						<enabled>true</enabled>
+					</snapshots>
+				</repository>
+			</repositories>
+		</profile>
+	</profiles>
+
 </project>
