Spring Web Services 2.2.1.RELEASE requires JDK 8 for compilation
2.2.1 has introduced support for @Repeatable so it now requires JDK for
compilation.

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -418,6 +418,7 @@ platform_definition:
       version: 2.2.1.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-ws
+        compileWith: jdk8
         runTestsWith:
           - jdk8
       modules:
